css/base.css
/* # Base Styles */

/* ## Base Typography */

/* ### Font Families */

@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,900|Merriweather:400,400italic,700,700italic,900,900italic,300italic);


body {
    font-family: "Merriweather", "Times", serif;
}

h1, h2, h3, h4, h5, h6, pre, code {
    font-family: "Source Code Pro", sans-serif;
}

header, footer {
    font-family: "Source Code Pro", sans-serif;
}


/* ### Font Styling */

html {
    font-size: 100%;
}

body {
    font-size: 1.5em;
    font-weight: 400;
    line-height: 140%;
}

h1, h2, h3 {
    line-height: 1.1em;
}

h3, h4, h5 {
    line-height: 1.0em;
}

h1 {
    font-size: 2.5em;
    font-weight: 900;
}

h2 {
    font-size: 2.2em;
    font-weight: 800;
}

h3 {
    font-size: 1.8em;
    font-weight: 700;
}

h4 {
    font-size: 1.6em;
}

h5 {
    font-size: 1.5em;
}

h6 {
    font-size: 1.4em;
}

pre, code {
    font-weight: 200;
    background-color: #eee;
    padding: 0.1em;
}

footer {
    text-transform: capitalize;
}

footer a, footer a:hover, footer a:focus,
footer a:active {
    font-style: normal;
    padding: 0.15em;
    margin: 0.35em;
}

article {
    text-align:justify;
    text-justify:inter-word;
}

.meta {
    font-style: italic;
    font-weight: 300;
    font-size: 1.00em;
}

/* ### Text Overflow */

body {
    overflow-x: hidden;
}

header, article, p, #article-text {
    overflow: inherit;
}

/* ## Color Choices */

html {
    color: #2f2f2f;
    background-color: #f9f9f9;
}


/* ### Link Styling */

a {
    text-decoration: none;
}

a:hover, a:active {
    text-decoration: underline;
}

a, a:focus, a:hover, a:active, a:visited {
    color: #311CBA;
    font-family: "Source Code Pro", sans-serif;
    font-weight: 200;
    /* background-color: #E1E5ED; */
    padding: 0.1em;
}

/* ## Layout Styles */


/* ### Margins and Padding */

body, article, header, nav {
    margin: 0px;
    padding: 0px;
}

body {
    margin-left: auto;
    margin-right: auto;
    padding: 30px;
}

p {
    margin-bottom: 1.5em;
}


footer {
    margin-bottom: 3.0em;
}

h1 {
    margin-bottom: 0.25em;
}

#article-text {
    margin-top: 0.75em;
}

/* ### Sizing */

body {
    max-width: 756px;
}

article {
    max-width: 720px;
}


/* ## Goodies */


blockquote {
    border-left: 10px #eee solid;
    margin-left: 0px;
    padding-left: 2.0em;
}

/* Glyph, by Harry Roberts */
		
hr.foot {
    padding: 0;
    border: none;
    border-top: medium double #333;
    color: #333;
    text-align: center;
    width: 100%;
    max-width: inherit;
    margin: 0.75em 0px 0px;
    padding: 0px;
}
hr.foot:after {
    content: "τ";
    display: inline-block;
    position: relative; 
    top: -0.6em;  
    font-size: 1.5em;
    padding: 0 0.25em;
    background: #f9f9f9;
}

#post-list {
    padding: 0;
    margin: 0;
}

#post-list li {
    margin-bottom: 1.5em;
}

